Simpified the API
Now there is only one new endpoint /token/api which issues the API token. We would like the
existing endpoint for /token/refresh to handle refreshing the AT for API tokens the same way
it does for RTs.
