# src/main/resources/openapi/token-1.0.yaml
@@ -93,9 +93,7 @@ paths:
       - $ref: headers/okapi-url-required.yaml
     post:
       description: |
-        Returns a new refresh token and a new access token. Also returns the expiration of each token
-        in the body of the response. Time to live is 10 minutes for the access token and one week for
-        the refresh token.
+        Returns a token response depending on the type of refresh token provided.
       operationId: token-refresh
       requestBody:
         content:
@@ -105,7 +103,7 @@ paths:
         required: true
       responses:
         "201":
-          description: Refreshed tokens successfully
+          description: Refreshed successfully
           content:
             application/json:
               schema:
@@ -150,83 +148,24 @@ paths:
           $ref: "#/components/responses/trait_500"
   /token/api:
     parameters:
-      - $ref: headers/okapi-tenant-required.yaml
       - $ref: headers/okapi-url-required.yaml
     post:
       description: |
-        Creates and saves a new api token for the current authenticated user and returns it in
-        the body of the response.
-      operationId: token-api-create
-      responses:
-        "201":
-          description: Created a new api token successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/tokenResponse"
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "500":
-          $ref: "#/components/responses/trait_500"
-    get:
-      description: |
-        Returns a list of api token token ids for the current authenticated user if there are any.
-      operationId: token-api-list
-      responses:
-        "201":
-          description: Retrieved a list of API tokens successfully. Can be empty if there are none.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/tokenIds"
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "500":
-          $ref: "#/components/responses/trait_500"
-  /token/access:
-    parameters:
-      - $ref: headers/okapi-tenant-required.yaml
-      - $ref: headers/okapi-url-required.yaml
-    post:
-      description: |
-        Creates and returns an new expiring access token if the provided API token is valid.
-      operationId: token-api-access
+        Generates a new API token based on the provided API token request.
+      operationId: token-api
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/apiToken"
+              $ref: "#/components/schemas/apiTokenRequest"
         required: true
       responses:
         "201":
-          description: |
-            A new access token has been created based on the provided API token. This is included
-            in the response.
+          description: Created a new API token successfully
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/tokenResponse"
-        "400":
-          $ref: "#/components/responses/trait_400"
-        "500":
-          $ref: "#/components/responses/trait_500"
-  /token/revoke:
-    parameters:
-      - $ref: headers/okapi-tenant-required.yaml
-      - $ref: headers/okapi-url-required.yaml
-    post:
-      description: |
-        Revokes the API token associated with the provided API token identifier
-      operationId: token-api-revoke
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/apiTokenId"
-        required: true
-      responses:
-        "201":
-          description: The API token associated with the provided API token id has been successfully revoked
         "400":
           $ref: "#/components/responses/trait_400"
         "500":
@@ -264,9 +203,5 @@ components:
       $ref: schemas/signRefreshToken.json
     token:
       $ref: schemas/token.json
-    tokenIds:
-      $ref: schemas/tokenIds.json
-    apiTokenId:
-      $ref: schemas/apiTokenId.json
-    apiToken:
-      $ref: schemas/apiToken.json
+    apiTokenRequest:
+      $ref: schemas/apiTokenRequest.json
